# recruit-connect

./: .env  .gitignore  README.md  docker-compose.yaml  pyproject.toml
src/: loader.py  test.ipynb
