[tool.poetry]
name = "rag-searcher"
version = "0.1.0"
description = ""
authors = ["PH <phlin@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.14"
boto3 = "^1.35.0"
pgvector = "^0.3.2"
psycopg2-binary = "^2.9.9"
pypdf = "^4.3.1"
langchain-community = "^0.2.12"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
